[gd_scene load_steps=2 format=3 uid="uid://c8v4w44eesopj"]

[ext_resource type="Script" uid="uid://bfyuly3163oux" path="res://call_players.gd" id="1_6oh8h"]

[node name="CallPlayers" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6oh8h")

[node name="BackToClubroom" type="Button" parent="."]
layout_mode = 2
offset_left = 405.0
offset_top = 518.0
offset_right = 570.0
offset_bottom = 549.0
text = "Return To Clubroom"

[node name="PlayerCounterLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.5
offset_top = -11.5
offset_right = 132.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Players Ready: 0 / 11"

[node name="StartMatchButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -132.5
offset_right = 132.5
offset_bottom = 31.0
grow_horizontal = 2
text = "Start Match"

[node name="WarningLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.497
anchor_top = 0.204
anchor_right = 0.497
anchor_bottom = 0.204
offset_left = -20.544
offset_top = -11.192
offset_right = 19.456
offset_bottom = 11.808
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CallBackupButton" type="Button" parent="."]
layout_mode = 0
offset_left = 468.0
offset_top = 389.0
offset_right = 579.0
offset_bottom = 420.0
text = "Call a Backup"

[node name="LineupContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="MateWeNeedYouButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.457
anchor_top = 0.44
anchor_right = 0.457
anchor_bottom = 0.44
offset_left = -18.464
offset_top = -5.12003
offset_right = 18.536
offset_bottom = 4.87997
grow_horizontal = 2
grow_vertical = 2
text = "Mate, we need you!!"

[node name="CallsRemainingLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 377.0
offset_top = 443.0
offset_right = 662.0
offset_bottom = 466.0
text = "Calls Left: 2 / 2"

[connection signal="pressed" from="BackToClubroom" to="." method="_on_button_clubroom"]
[connection signal="pressed" from="CallBackupButton" to="." method="_on_call_backup_button_pressed"]
[connection signal="pressed" from="MateWeNeedYouButton" to="." method="_on_MateWeNeedYouButton_pressed"]
